src/main/java/com/example/stream/spring/courses/reactive/example/model/error/DepartmentServerError.java
package com.example.stream.spring.courses.reactive.example.model.error;

public record DepartmentServerError() implements DepartmentError {
}
